--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,38 @@
-name: Nightly update
+name: Update source
 on:
+  push:
+    paths-ignore:
+      - 'README.md'
+      - 'LICENSE.AGPL'
+      - 'LICENSE.APACHE'
+      - 'UNLICENSE'
+      - 'LICENSE'
+    branches: [ "main" ]
   schedule:
-    - cron: '0 0 * * *' # Runs every night at midnight UTC
-  workflow_dispatch: # Allows manual trigger
+    - cron: '*/10 * * * *'
+  workflow_dispatch:
 
-# cancel duplicate run if from same branch
-concurrency:
-  group: ${{ github.ref }}
-  cancel-in-progress: true
+permissions:
+  contents: write
 
 jobs:
   check-changes:
-    if: github.event_name == 'schedule'
     runs-on: ubuntu-latest
-    outputs:
-      has_changes: ${{ steps.check.outputs.has_changes }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Ensure full history
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+      - name: Setup Node.js environment
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
+      - name: Check for changes
+        run: |
+          node index.js
+      - name: Commit changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        continue-on-error: true
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add src.json
+          git commit -am "Update source"
+          git push
