--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "LCSideStore",
-  "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "Unlicense",
-  "packageManager": "pnpm@10.20.0"
+  "license": "Unlicense"
 }
